# SocialMediaApp

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  ReadMe.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c8976bab8d0_create_users_table.py
app/: database.py  main.py  model.py  test_main.py
app/api/v1/: auth.py  likes.py  posts.py  users.py
app/core/: config.py  database.py  db_init.py  dependencies.py  exception_handlers.py  exceptions.py  responses.py  security.py
app/custom_types/: post_types.py
app/dependancies/: security_dep.py
app/dependencies/: pagination.py
app/dtos/: post_dto.py  token_dto.py  user_dto.py
app/mappers/: post_mapper.py
app/models/: post.py  post_like.py  user.py
app/repositories/: post_like_repository.py  post_repository.py  user_repository.py
app/schemas/: post.py  token.py  user.py
app/services/: post_like_service.py  post_service.py  user_service.py
app/tests/: conftest.py  test_posts.py  test_users.py
app/tests/auth/: test_auth.py
app/tests/factories/: post_factory.py  user_factory.py
app/tests/fixtures/: auth_fixtures.py  post_fixtures.py  user_fixtures.py
app/tests/likes/: test_likes.py
app/tests/posts/: test_posts.py
app/tests/users/: test_users.py
app/tests/utils/: constants.py  helpers.py
skills/: skills.md
study/: postgres_driver_main.py  test_postgres_driver_main.py  test_without_db_main.py  without_db_main.py
