[project]
name = "socialmediaapp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "uvicorn>=0.50.1",
    "pydantic>=2.13.4",
    "httpx2>=2.5.0",
    "psycopg[binary]>=3.3.4", # Newest version(V3) and if neede use this instead of psycopg2
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12", # Add because SQLAlchemy required this (use binary for faster/better performance)
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "black>=26.5.1",
    "ruff>=0.15.20",
    "pyrefly>=1.1.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
python_version = "3.14"
strict = true
